--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to HTML</h1>
+  <h1>welcome to the dashboard</h1>
+<h1>I CAN TELL YOU THAT BACKEND IS INTERESTING.</h1>
+<h1>MY MERN STACK JOURNEY IS LOADING</h1>  
 </body>
 </html>
